[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "b1500-powermeter-rollover"
version         = "1.0.0"
description     = "B1500 + Thorlabs power-meter IV sweep with four-algorithm rollover detection"
readme          = "README.md"
authors         = [{name = "Veronica Gao ZHan"}]
requires-python = ">=3.8"
keywords        = ["semiconductor", "B1500", "Thorlabs", "IV sweep", "rollover", "VISA", "PyQt5"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "pyvisa>=1.12.0",
    "pyvisa-py>=0.5.3",
    "pyusb>=1.2.1",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
gui  = ["PyQt5>=5.15.0", "matplotlib>=3.5.0"]
ml   = ["scikit-learn>=1.0.0"]
all  = ["PyQt5>=5.15.0", "matplotlib>=3.5.0", "scikit-learn>=1.0.0", "scipy>=1.7.0"]

[project.scripts]
b1500-rollover = "b1500_powermeter_rollover.__main__:main"

[tool.setuptools.packages.find]
where = [".."]
include = ["b1500_powermeter_rollover*"]
